welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuits:Int=0
^Poucet:9: error: illegal start of simple expression
} while (!crossing())
^